force-app/main/default/objects/SKFContributor__c/SKFContributor__c.object-meta.xml
<CustomObject>
    <label>SKFContributor</label>
    <nameField>
        <label>SKFContributor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SKFContributors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>