force-app/main/default/objects/SKFContributor__c/fields/organisationId__c.field-meta.xml
<CustomField>
    <fullName>organisationId__c</fullName>
    <label>organisationId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>