force-app/main/default/objects/SKFContributor__c/fields/organisationName__c.field-meta.xml
<CustomField>
    <fullName>organisationName__c</fullName>
    <label>organisationName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>