force-app/main/default/objects/SKFContributor__c/fields/projectId__c.field-meta.xml
<CustomField>
    <fullName>projectId__c</fullName>
    <label>projectId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>