force-app/main/default/objects/SKFContributor__c/fields/projectName__c.field-meta.xml
<CustomField>
    <fullName>projectName__c</fullName>
    <label>projectName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>