force-app/main/default/objects/SKFContributor__c/fields/skfId__c.field-meta.xml
<CustomField>
    <fullName>skfId__c</fullName>
    <label>skfId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>