force-app/main/default/objects/SKFContributor__c/fields/skfname__c.field-meta.xml
<CustomField>
    <fullName>skfname__c</fullName>
    <label>skfname</label>
    <length>200</length>
    <type>Text</type>
</CustomField>